--- a/Problema/assets/index.html
+++ b/Problema/assets/index.html
@@ -88,5 +88,238 @@
         </div>
       </div>
     </div>
+    <section>
+      <div class="carousel">
+        <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+          <div role="listbox" class="carousel-inner">
+            <div class="item active"><img src="../assets/images/slider1.jpg">
+              <div class="carousel-caption">
+                <h1 class="box">AUTOMN/WINTER LOOKBOOK</h1>
+                <h1 class="box1">- 2016 COLECTION -</h1>
+              </div>
+            </div>
+            <div class="item"><img src="../assets/images/slider2.jpg">
+              <div class="carousel-caption">
+                <h1 class="box">AUTOMN/WINTER LOOKBOOK</h1>
+                <h1 class="box1">- 2016 COLECTION -</h1>
+              </div>
+            </div>
+          </div><a href="#carousel-example-generic" role="button" data-slide="prev" class="left carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span></a><a href="#carousel-example-generic" role="button" data-slide="next" class="right carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next</span></a>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="row accesories">
+        <div class="container">
+          <div class="col-md-5"><img src="../assets/images/banner1.jpg" class="img-responsive"></div>
+          <div class="col-md-7"><img src="../assets/images/banner2.jpg" class="img-responsive"></div>
+        </div>
+      </div>
+    </section>
+    <section class="list-products">
+      <nav class="text-center">
+        <ul class="pagination">
+          <li><a href="#sale" aria-label="Previous" class="options"><span class="glyphicon glyphicon-menu-left"></span></a></li>
+          <li><a id="latest" href="#latest" class="options">LATEST</a></li>
+          <li><a id="best" href="#best" class="options">BESTSELLER</a></li>
+          <li><a id="sale" href="#sale" class="options">SALE</a></li>
+          <li><a href="#latest" aria-label="Next" class="options"><span class="glyphicon glyphicon-menu-right"></span></a></li>
+        </ul>
+      </nav>
+      <div class="list-img-products container">
+        <div class="row">
+          <div class="col-md-3">
+            <ul>
+              <li class="img-thumbnail">
+                <button class="ofert">NEW</button><img src="../assets/images/a1.jpg" class="img-responsive">
+                <div class="info text-center">
+                  <p>Deliver Wide</p><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                  <p class="precio">$218.00</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul>
+              <li class="img-thumbnail">
+                <button class="ofert sale">SALE </button><img src="../assets/images/b1.jpg" class="img-responsive">
+                <div class="info text-center">
+                  <p>Deliver Wide</p><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                  <ul class="precio list-unstyled list-inline">
+                    <li class="trought">$242.00</li>
+                    <li>$218.00</li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul>
+              <li class="img-thumbnail">
+                <button class="ofert">NEW</button><img src="../assets/images/c1.jpg" class="img-responsive">
+                <div class="info text-center">
+                  <p>Deliver Wide</p><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                  <ul class="precio list-unstyled list-inline">
+                    <li class="trought">$242.00</li>
+                    <li>$218.00</li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul>
+              <li class="img-thumbnail">
+                <button class="ofert">NEW</button><img src="../assets/images/d1.jpg" class="img-responsive">
+                <div class="info text-center">
+                  <p>Deliver Wide</p><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                  <p class="precio">$218.00</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2"><img src="../assets/images/client1.jpg" class="img-responsive"></div>
+          <div class="col-sm-2"><img src="../assets/images/client2.jpg" class="img-responsive"></div>
+          <div class="col-sm-2"><img src="../assets/images/client3.jpg" class="img-responsive"></div>
+          <div class="col-sm-2"><img src="../assets/images/client4.jpg" class="img-responsive"></div>
+          <div class="col-sm-2"><img src="../assets/images/client5.jpg" class="img-responsive"></div>
+          <div class="col-sm-2"><img src="../assets/images/client6.jpg" class="img-responsive"></div>
+        </div>
+      </div>
+    </section>
+    <section class="list-products">
+      <nav class="text-center">
+        <ul class="pagination">
+          <li><a href="#sale" aria-label="Previous" class="options"><span class="glyphicon glyphicon-menu-left"></span></a></li>
+          <li><a id="latest" href="#latest" class="options">CLOTHING</a></li>
+          <li><a id="best" href="#best" class="options">EQUIPMENTS</a></li>
+          <li><a id="sale" href="#sale" class="options">JEWELLERY</a></li>
+          <li><a href="#latest" aria-label="Next" class="options"><span class="glyphicon glyphicon-menu-right"></span></a></li>
+        </ul>
+      </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li class="bottom">
+                <div class="row">
+                  <div class="col-md-6">
+                    <button class="ofert">NEW</button><img src="../assets/images/a2.jpg" class="img-thumbnail img-responsive">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="details">
+                      <p>Deliver Wide</p>
+                      <ul class="precio list-unstyled list-inline">
+                        <li class="trought">$242.00</li>
+                        <li>$218.00</li>
+                      </ul><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                    </div>
+                    <button><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</button>
+                  </div>
+                </div>
+              </li>
+              <li class="bottom">
+                <div class="row">
+                  <div class="col-md-6">
+                    <button class="ofert">NEW</button><img src="../assets/images/c2.jpg" class="img-thumbnail img-responsive">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="details">
+                      <p>Deliver Wide</p>
+                      <ul class="precio list-unstyled list-inline">
+                        <li>$218.00</li>
+                      </ul><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                    </div>
+                    <button><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li class="bottom">
+                <div class="row">
+                  <div class="col-md-6">
+                    <button class="ofert">NEW</button><img src="../assets/images/d2.jpg" class="img-thumbnail img-responsive">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="details">
+                      <p>Deliver Wide</p>
+                      <ul class="precio list-unstyled list-inline">
+                        <li>$218.00</li>
+                      </ul><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                    </div>
+                    <button><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</button>
+                  </div>
+                </div>
+              </li>
+              <li class="bottom">
+                <div class="row">
+                  <div class="col-md-6">
+                    <button class="sale ofert">SALE</button><img src="../assets/images/c2.jpg" class="img-thumbnail img-responsive">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="details">
+                      <p>Deliver Wide</p>
+                      <ul class="precio list-unstyled list-inline">
+                        <li class="trought">$242.00</li>
+                        <li>$218.00</li>
+                      </ul><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                    </div>
+                    <button><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li class="bottom">
+                <div class="row">
+                  <div class="col-md-6"><img src="../assets/images/g2.jpg" class="img-thumbnail img-responsive"></div>
+                  <div class="col-md-6">
+                    <div class="details">
+                      <p>Deliver Wide</p>
+                      <ul class="precio list-unstyled list-inline">
+                        <li>$218.00</li>
+                      </ul><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                    </div>
+                    <button><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</button>
+                  </div>
+                </div>
+              </li>
+              <li class="bottom">
+                <div class="row">
+                  <div class="col-md-6">
+                    <button class="ofert">NEW</button><img src="../assets/images/e2.jpg" class="img-thumbnail img-responsive">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="details">
+                      <p>Deliver Wide</p>
+                      <ul class="precio list-unstyled list-inline">
+                        <li>$218.00</li>
+                      </ul><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>
+                    </div>
+                    <button><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
