--- a/Problema/assets/index.html
+++ b/Problema/assets/index.html
@@ -25,7 +25,7 @@
           <div class="col-md-9">
             <div class="ul pull-right list-unstyled list-inline first-list">
               <li><span class="glyphicon glyphicon-film">Lenguajes</span><span class="glyphicon glyphicon-menu-down"></span></li>
-              <li><span class="glyphicon glyphicon-eur">Currency</span><span class="glyphicon glyphicon-menu-down"></span></li>
+              <li><span class="glyphicon glyphicon-usd">Currency</span><span class="glyphicon glyphicon-menu-down"></span></li>
               <li><span class="glyphicon glyphicon-user">MyAccount</span><span class="glyphicon glyphicon-menu-down"></span></li>
             </div>
           </div>
@@ -317,6 +317,82 @@
                 </div>
               </li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="list-products">
+      <nav class="text-center">
+        <ul class="pagination">
+          <li><a href="#sale" aria-label="Previous" class="options"><span class="glyphicon glyphicon-menu-left"></span></a></li>
+          <li><a id="best" href="#best" class="options">BLOG</a></li>
+          <li><a href="#latest" aria-label="Next" class="options"><span class="glyphicon glyphicon-menu-right"></span></a></li>
+        </ul>
+      </nav>
+      <div class="blog">
+        <div class="row">
+          <div class="container">
+            <div class="col-md-3 bottom"><img src="../assets/images/blog2.jpg" class="img-responsive">
+              <h5>THE SAMPLE HEADING TITLE</h5>
+              <P>27/11/2015</P>
+              <P>Lorem ipsum dolor sit amet, consectur adipiscing ing elit, sed do...</P>
+              <p class="precio">Read more...</p>
+            </div>
+            <div class="col-md-3 bottom"><img src="../assets/images/blog1.jpg" class="img-responsive">
+              <h5>THE SAMPLE HEADING TITLE</h5>
+              <P>27/11/2015</P>
+              <P>Lorem ipsum dolor sit amet, consectur adipiscing ing elit, sed do...</P>
+              <p class="precio">Read more...</p>
+            </div>
+            <div class="col-md-3 bottom"><img src="../assets/images/blog2.jpg" class="img-responsive">
+              <h5>THE SAMPLE HEADING TITLE</h5>
+              <P>27/11/2015</P>
+              <P>Lorem ipsum dolor sit amet, consectur adipiscing ing elit, sed do...</P>
+              <p class="precio">Read more...</p>
+            </div>
+            <div class="col-md-3 bottom"><img src="../assets/images/blog3.jpg" class="img-responsive">
+              <h5>THE SAMPLE HEADING TITLE</h5>
+              <P>27/11/2015</P>
+              <P>Lorem ipsum dolor sit amet, consectur adipiscing ing elit, sed do...</P>
+              <p class="precio">Read more...</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="container">
+            <div class="col-md-4">
+              <div class="box-span text-center">
+                <div class="row">
+                  <div class="col-md-2"><span id="icon" class="glyphicon glyphicon-earphone"></span></div>
+                  <div class="col-md-10">
+                    <h4>ORDER ONLINE NOW</h4>
+                    <p>Call Us:(0123) 456 789</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="box-span text-center">
+                <div class="row">
+                  <div class="col-md-2"><span id="icon" class="glyphicon glyphicon-plane"></span></div>
+                  <div class="col-md-10">
+                    <h4>FREE WORLDWIDE SHIPPING</h4>
+                    <p>On Order Over $100</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="box-span text-center">
+                <div class="row">
+                  <div class="col-md-2"><span id="icon" class="glyphicon glyphicon-credit-card"></span></div>
+                  <div class="col-md-10">
+                    <h4>30 DAYS MONEY BACK 100%</h4>
+                    <p>Satisfaction Guarantee</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
