--- a/Problema/assets/index.html
+++ b/Problema/assets/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/main1.css" rel="stylesheet">
-    <link href="css/header.css" rel="stylesheet">
-    <link href="css/footer.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -359,7 +358,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="container">
+          <div class="container bottom">
             <div class="col-md-4">
               <div class="box-span text-center">
                 <div class="row">
@@ -393,6 +392,123 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="footer">
+        <div class="row">
+          <div class="container">
+            <div class="col-md-3">
+              <h4>ACCESORIES</h4>
+              <p class="grey">Lorem ipsum dolor sit amet, consectetur adipisic ing elit, sed do eiusmod tempor incididunt ut labor et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris</p>
+              <div class="text-center">
+                <button class="contact"><span class="ion-social-facebook"></span></button>
+                <button class="contact"><span class="ion-social-rss"></span></button>
+                <button class="contact"><span class="ion-social-twitter"></span></button>
+                <button class="contact"><span class="ion-social-skype"></span></button>
+                <button class="contact"><span class="ion-social-dribbble"></span></button>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <h4>MY ACCOUNT</h4>
+              <ul class="mt-5 list-unstyled">
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"> </span>
+                  <p class="grey inline">My Account</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Order History</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Wish List</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Newsletter</p>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <h4>INFORMATION</h4>
+              <ul class="mt-5 list-unstyled">
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"> </span>
+                  <p class="grey inline">About US</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Delivery Information</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Privacy Policy</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Terms & Conditions</p>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <h4>EXTRAS</h4>
+              <ul class="mt-5 list-unstyled">
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"> </span>
+                  <p class="grey inline">Brands</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Gift Vouchers</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Affiliates</p>
+                </li>
+                <li class="mb-7"><span class="glyphicon glyphicon-triangle-right"></span>
+                  <p class="grey inline">Specials</p>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h4>ABOUT US</h4>
+              <div class="row mt-10">
+                <div class="col-md-2">
+                  <button class="about"><span class="ion-ios-location"></span></button>
+                </div>
+                <div class="col-md-10">
+                  <ul class="list-unstyled">
+                    <li class="grey">8901 Marmora Road, Glasgow DO4 89</li>
+                    <li class="grey">GR, New York</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-2">
+                  <button class="about"><span class="ion-ios-telephone"></span></button>
+                </div>
+                <div class="col-md-10">
+                  <ul class="list-unstyled">
+                    <li class="grey">(0123)456789</li>
+                    <li class="grey">(0987)654321</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-2">
+                  <button class="about"><span class="ion-ios-email"></span></button>
+                </div>
+                <div class="col-md-10">   
+                  <ul class="list-unstyled list-inline">
+                    <li class="grey">admin@bootexperts.com</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="footer-small">
+        <div class="row">
+          <div class="container">
+            <div class="col-md-6">
+              <p>Copyright 2015 BootExperts. All rights reserved.</p>
+            </div>
+            <div class="col-md-6"><img src="../assets/images/payment.png" class="pull-right img-responsive"></div>
           </div>
         </div>
       </div>
